--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "1.2.16",
     "angular-animate": "1.2.16",
     "angular-touch": "1.2.16",
-    "angular-route": "1.2.16"
+    "angular-route": "1.2.16",
+    "moment": "~2.7.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
